--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "php": "^8.0.2",
         "tomatophp/console-helpers": "^1.0",
         "tomatophp/tomato-admin": "^1.0",
-        "spatie/laravel-translatable": "*"
+        "spatie/laravel-translatable": "*",
+        "tomatophp/tomato-translations": "^1.1"
     }
 }
